Lab 04: Clarified wording. Added OS to use for new VM. Fixed description of functionality of the DeployAzureDSC.ps1. Updated procedure to add virtual disk to match UI. Updated procedure to configure backend pool to match UI. Fixed numbering.

--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -54,7 +54,7 @@ The main tasks for this exercise are as follows:
 
   - Subscription: **_The Azure subscription you intend to use for this lab_**.
 
-  - Resource group name: click **Create new** and then click **20533C0401-LabRG**
+  - Resource group name: click **Create new** and then type **20533C0401-LabRG**
 
   - Location: **_The Azure region closest to the location of your lab computer_**.
 
@@ -67,7 +67,7 @@ The main tasks for this exercise are as follows:
   - Managed: **Yes**
 
 
-1. From the Azure portal, create a new virtual machine with the following settings:
+4. From the Azure portal, create a new Windows Server 2016 Datacenter virtual machine with the following settings:
 
 
   - Name: **ResDevWebVM1**
@@ -103,7 +103,7 @@ The main tasks for this exercise are as follows:
   - Guest OS diagnostics: **Disabled**
 
 
-1. From the Azure portal, create a new virtual machine with the following settings:
+5. From the Azure portal, create a new Windows Server 2016 Datacenter virtual machine with the following settings:
 
 
   - Name: **ResDevWebVM2**
@@ -139,9 +139,9 @@ The main tasks for this exercise are as follows:
   - Guest OS diagnostics: **Disabled**
 
 
-1. From the Azure portal, display the blade of the **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
+6. From the Azure portal, display the blade of the **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
 
-2. Leave the instance of Internet Explorer with the Azure portal open.
+7. Leave the instance of Internet Explorer with the Azure portal open.
 
 
 
@@ -163,11 +163,11 @@ The main tasks for this exercise are as follows:
   - Location: **_The same location you chose for the availability set_**.
 
 
-1. Wait for the deployment to complete. This should take a few seconds.
+2. Wait for the deployment to complete. This should take a few seconds.
 
-2. From the Azure portal, add a backend pool named **ResDevWebLBPool** to the newly created load balancer consisting of the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
+3. From the Azure portal, add a backend pool named **ResDevWebLBPool** to the newly created load balancer, associated with the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
 
-3. Add a probe to the load balancer with the following settings:
+4. Add a probe to the load balancer with the following settings:
 
 
   - Name: **ResDevWebProbe80**
@@ -183,7 +183,7 @@ The main tasks for this exercise are as follows:
   - Unhealthy threshold: **2**
 
 
-1. Add a load balancer rule to the newly created load balancer with the following settings:
+5. Add a load balancer rule to the newly created load balancer with the following settings:
 
 
   - Name: **ResDevWebLBRule80**
@@ -206,7 +206,7 @@ The main tasks for this exercise are as follows:
 
   - Floating IP (direct server return): **Disabled**
 
-1. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
+6. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
 
 
 > **Result**: After completing this exercise, you should have created an availability set for Azure IaaS v2 virtual machines and configured them up as a load balanced pair.
@@ -238,7 +238,7 @@ The main tasks for this exercise are as follows:
 
 5. In the File Explorer, right click on the **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window with the current directory set to **D:\Labfiles\Lab04\Starter**.
 
-6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first creates a new storage account and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
+6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first retrieves the storage account from the resource group, and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
 7. Start the execution of the script. When prompted, sign in with the username and the password of an account that is either a Service Administrator or a Co-Admin of your Azure subscription. Wait until the script completes. 
 
@@ -258,7 +258,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test the DSC configuration and virtual machine availability
   
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM1** security group with the following settings:
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM1-nsg** security group with the following settings:
 
 
   - Name: **allow-http**
@@ -272,7 +272,7 @@ The main tasks for this exercise are as follows:
   - Action: **Allow**
 
 
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM2** security group with the following settings:
+2. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the **ResDevWebVM2-nsg** security group with the following settings:
 
 
   - Name: **allow-http**
@@ -286,23 +286,23 @@ The main tasks for this exercise are as follows:
   - Action: **Allow**
 
 
-1. From the Azure portal, identify the IP address of the **ResDevWebLB** load balancer.
+3. From the Azure portal, identify the IP address of the **ResDevWebLB** load balancer.
 
-2. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
+4. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
 
-3. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
+5. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
 
-4. From the Remote Desktop sessions to two Azure VMs, stop the **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
+6. From the Remote Desktop sessions to two Azure VMs, stop the **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
 
-5. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
+7. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
 
-6. In the new InPrivate Browsing window, delete browsing history.
+8. In the new InPrivate Browsing window, delete browsing history.
 
-7. Browse to the IP address of the **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
+9. Browse to the IP address of the **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
 
-8. From the Remote Desktop session window, start the **World Wide Web Publishing Service** service on **ResDevWebVM1**.
+10. From the Remote Desktop session window, start the **World Wide Web Publishing Service** service on **ResDevWebVM1**.
 
-9. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
+11. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
 
 > **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
 
@@ -329,17 +329,15 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, from the Azure portal in the Internet Explorer window, attach two managed data disks named **ResDevWebVM1dd01** and **ResDevWebVM1dd02** to the ResDevWebVM1 virtual machine with the following settings:
 
+  - Source type: **New (empty disk)**
 
-  - Resource group: **20533C0401-LabRG**
-
-  - Account type: **Standard_LRS**
-
-  - Source type: **None (empty disk)**
+  - Account type: **Standard (HDD)**
 
   - Size: **1023**
 
+  - Storage Container: Select the existing storage account and the **vhds** container
 
-1. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
+2. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
 
 
 
