--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -33,17 +33,17 @@
 
   - Managed: **Yes**
 
-1. Wait for deployment to complete. This should take only a few seconds.
+7. Wait for deployment to complete. This should take only a few seconds.
 
-2. In the Azure portal, click **New** on the **Hub** menu.
+8. In the Azure portal, click **New** on the **Hub** menu.
 
-3. On the **New** blade, click **Compute**.
+9. On the **New** blade, click **Compute**.
 
-4. On the **Compute** blade, click **Windows Server 2016 Datacenter**.
+10. On the **Compute** blade, click **Windows Server 2016 Datacenter**.
 
-5. On the **Windows Server 2016 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The **Create virtual machine** blade appears and expands its **Basics** blade.
+11. On the **Windows Server 2016 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The **Create virtual machine** blade appears and expands its **Basics** blade.
 
-6. On the **Basics** blade, specify the following:
+12. On the **Basics** blade, specify the following:
 
   - Name: **ResDevWebVM1**
 
@@ -59,11 +59,11 @@
 
   - Location: **_The same location you chose for the availability set_**.
 
-1. Click **OK**. The **Choose a size** blade automatically appears.
+13. Click **OK**. The **Choose a size** blade automatically appears.
 
-2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+14. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
 
-3. On the **Settings** blade, specify the following settings:
+15. On the **Settings** blade, specify the following settings:
 
   - Use managed disks: *Yes**
 
@@ -81,19 +81,19 @@
 
   - Guest OS diagnostics: **Disabled**
 
-1. Click **OK**. The **Summary** blade automatically appears.
+16. Click **OK**. The **Summary** blade automatically appears.
 
-2. On the **Summary** blade, click **OK**.
+17. On the **Summary** blade, click **OK**.
 
-3. In the Azure portal, click **New** in the **Hub** menu.
+18. In the Azure portal, click **New** in the **Hub** menu.
 
-4. On the **New** blade, click **Compute**.
+19. On the **New** blade, click **Compute**.
 
-5. On the **Compute** blade, click **Windows Server 2016 Datacenter**.
+20. On the **Compute** blade, click **Windows Server 2016 Datacenter**.
 
-6. On the **Windows Server 2016 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The **Create virtual machine** blade appears and expands its **Basics** blade.
+21. On the **Windows Server 2016 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The **Create virtual machine** blade appears and expands its **Basics** blade.
 
-7. On the **Basics** blade, specify the following:
+22. On the **Basics** blade, specify the following:
 
   - Name: **ResDevWebVM2**
 
@@ -109,11 +109,11 @@
 
   - Location: **_The same location you chose for the availability set_**.
 
-1. Click **OK**. The **Choose a size** blade automatically appears.
+23. Click **OK**. The **Choose a size** blade automatically appears.
 
-2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+24. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
 
-3. On the **Settings** blade, specify the following settings:
+25. On the **Settings** blade, specify the following settings:
 
   - Use managed disks: *Yes**
 
@@ -131,19 +131,19 @@
 
   - Guest OS diagnostics: **Disabled**
 
-1. Click **OK**. The **Summary** blade automatically appears.
+26. Click **OK**. The **Summary** blade automatically appears.
 
-2. On the **Summary** blade, click **OK**.
+27. On the **Summary** blade, click **OK**.
 
-3. In the Azure portal, in the **Hub** menu, click **More services**.
+28. In the Azure portal, in the **Hub** menu, click **More services**.
 
-4. In the list of services, click **Availability sets**. 
+29. In the list of services, click **Availability sets**. 
 
-5. On the **Availability sets** blade, click **ResDevWebAS**.
+30. On the **Availability sets** blade, click **ResDevWebAS**.
 
-6. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Note that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
+31. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Note that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
 
-7. Leave the instance of Internet Explorer with the Azure portal open.
+32. Leave the instance of Internet Explorer with the Azure portal open.
 
 
 
@@ -165,25 +165,29 @@
 
   - Location: **_The same location you chose for the availability set_**.
 
-1. Click **Create**. Wait for the deployment to complete.
+3. Click **Create**. Wait for the deployment to complete.
 
-2. In the Hub menu, click **More services**, select **Load Balancers** from the list of services, and then on the **Load balancers** blade, click **ResDevWebLB**.
+4. In the Hub menu, click **More services**, select **Load Balancers** from the list of services, and then on the **Load balancers** blade, click **ResDevWebLB**.
 
-3. On the ResDevWebLB load balancer blade, click **Backend pools**, and then click **Add**.
+5. On the ResDevWebLB load balancer blade, click **Backend pools**, and then click **Add**.
 
-4. On the **Add backend pool** blade, in the **Name** text box, type **ResDevWebLBPool**, and then click **Add a virtual machine**.
+6. On the **Add backend pool** blade, in the **Name** text box, type **ResDevWebLBPool**, and then click **Add a virtual machine**.
 
-5. On the **Choose virtual machines** blade, click **Choose an availability set**, and then, on the **Choose an availability set** blade, click **ResDevWebAS**.
+7. In the **Associated to** drop-down, click **Availability set**, and then, in the **Abailability set** drow-down, click **ResDevWebAS**.
 
-6. On the **Choose virtual machines** blade, click **Choose the virtual machines**, click the check boxes to the left of **ResDevWebVM1** and **ResDevWebVM2**, and then click **Select**.
+8. Click **Add a target network IPconfiguration**.
 
-7. On the **Choose virtual machines** blade, click **OK**.
+9. In the **Target virtual machine** drop-down, click **ResDevWebVM1**, and then in the **Network IP configuration** drop-down, click **ipconfig1 (10.0.0.4)**.
 
-8. On the **Add backend pool** blade, click **OK**. Wait until the operation completes.
+10. Click **Add a target network IPconfiguration**.
 
-9. On the ResDevWebLB blade, click **Health probes**, and then click **Add**. 
+11. In the **Target virtual machine** drop-down, click **ResDevWebVM2**, and then in the **Network IP configuration** drop-down, click **ipconfig1 (10.0.0.5)**.
 
-10. On the **Add health probe** blade, specify the following settings, and then click **OK**:
+12. On the **Add backend pool** blade, click **OK**. Wait until the operation completes.
+
+11. On the ResDevWebLB blade, click **Health probes**, and then click **Add**. 
+
+12. On the **Add health probe** blade, specify the following settings, and then click **OK**:
 
   - Name: **ResDevWebProbe80**
 
@@ -198,11 +202,11 @@
   - Unhealthy threshold: **2**
 
 
-1. Wait until the operation completes.
+13. Wait until the operation completes.
 
-2. On the ResDevWebLB blade, click **Load balancing rules**, and then click **Add**.
+14. On the ResDevWebLB blade, click **Load balancing rules**, and then click **Add**.
 
-3. On the **Add load balancing rule** blade, complete the following , and then click **OK**:
+15. On the **Add load balancing rule** blade, complete the following , and then click **OK**:
 
 
   - Name: **ResDevWebLBRule80**
@@ -226,9 +230,9 @@
   - Floating IP (direct server return): **Disabled**
 
 
-1. Wait until the operation completes.
+16. Wait until the operation completes.
 
-2. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
+17. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
 
 
 > **Result**: After completing this exercise, you should have created an availability set for Azure VMs and configured them up as a load balanced pair.
@@ -248,7 +252,7 @@
 
 5. In the File Explorer, right click on the **D:\Labfiles\Lab04\Starter\DeployAzureDSC.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE** window with the current directory set to **D:\Labfiles\Lab04\Starter**
 
-6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first creates a new storage account and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
+6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first retrieves the storage account from the resource group, and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
 7. Start the execution of the script. When prompted, sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription. Wait until the script completes.
 
@@ -300,17 +304,17 @@
   - Action: **Allow**
 
 
-1. Click **OK**.
+7. Click **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click **20533C0401-LabRG** to return to the **20533C0401-LabRG** blade.
+8. In the breadcrumb trail at the top of the portal interface, click **20533C0401-LabRG** to return to the **20533C0401-LabRG** blade.
 
-3. On the **20533C0401-LabRG** blade, in the list of resources, click the **ResDevWebVM2-nsg** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade.
+9. On the **20533C0401-LabRG** blade, in the list of resources, click the **ResDevWebVM2-nsg** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade.
 
-4. On the network security group blade, click **Inbound security rules**.
+10. On the network security group blade, click **Inbound security rules**.
 
-5. On the **Inbound security rules** blade, click **Add**.
+11. On the **Inbound security rules** blade, click **Add**.
 
-6. On the **Add inbound security rules** blade, specify the following settings:
+12. On the **Add inbound security rules** blade, specify the following settings:
 
 
   - Name: **allow-http**
@@ -324,41 +328,41 @@
   - Action: **Allow**
 
 
-1. Click **OK**.
+13. Click **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click **20533C0401-LabRG** to return to the **20533C0401-LabRG** blade.
+14. In the breadcrumb trail at the top of the portal interface, click **20533C0401-LabRG** to return to the **20533C0401-LabRG** blade.
 
-3. On the **20533C0401-LabRG** blade, in the list of resources, click **ResDevWebLB**, representing the load balancer.
+15. On the **20533C0401-LabRG** blade, in the list of resources, click **ResDevWebLB**, representing the load balancer.
 
-4. On the **ResDevWebLB** blade, note the value of its **IP address** entry.
+16. On the **ResDevWebLB** blade, note the value of its **IP address** entry.
 
-5. Open a new InPrivate Browsing Internet Explorer session, in the navigation bar, type the IP address that you noted in the previous step, and then press the **Enter** key.
+17. Open a new InPrivate Browsing Internet Explorer session, in the navigation bar, type the IP address that you noted in the previous step, and then press the **Enter** key.
 
-6. Verify that you can access the default IIS webpage.
+18. Verify that you can access the default IIS webpage.
 
-7. Close the **InPrivate Browsing** window.
+19. Close the **InPrivate Browsing** window.
 
-8. Switch to the Remote Desktop session on **ResDevWebVM1**. On the **Tools** menu in the **Server Manager** window, select **Services**.
+20. Switch to the Remote Desktop session on **ResDevWebVM1**. On the **Tools** menu in the **Server Manager** window, select **Services**.
 
-9. In the **Services** window, scroll down to the **World Wide Web Publishing Service** entry, right click on it, and select **Stop** on the context sensitive menu.
+21. In the **Services** window, scroll down to the **World Wide Web Publishing Service** entry, right click on it, and select **Stop** on the context sensitive menu.
 
-10. Switch to the Remote Desktop session on **ResDevWebVM2**. On the **Tools** menu in the **Server Manager** window, select **Services**.
+22. Switch to the Remote Desktop session on **ResDevWebVM2**. On the **Tools** menu in the **Server Manager** window, select **Services**.
 
-11. In the **Services** window, scroll down to the **World Wide Web Publishing Service** entry, right click on it, and select **Stop** on the context sensitive menu.
+23. In the **Services** window, scroll down to the **World Wide Web Publishing Service** entry, right click on it, and select **Stop** on the context sensitive menu.
 
-12. Switch back to MIA-CL1. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. In the new Internet Explorer window, click the **cogwheel** icon in the upper-right corner, click **Safety** on the drop-down menu, and then click **Delete browsing history**.
+24. Switch back to MIA-CL1. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. In the new Internet Explorer window, click the **cogwheel** icon in the upper-right corner, click **Safety** on the drop-down menu, and then click **Delete browsing history**.
 
-13. In the **Delete Browsing History** dialog box, click **Delete**.
+25. In the **Delete Browsing History** dialog box, click **Delete**.
 
-14. In the InPrivate Browsing Internet Explorer window, type the IP address of the load balancer in the navigation bar, and then press the **Enter** key.
+26. In the InPrivate Browsing Internet Explorer window, type the IP address of the load balancer in the navigation bar, and then press the **Enter** key.
 
-15. Verify that the **This page can't be displayed** message appears.
+27. Verify that the **This page can't be displayed** message appears.
 
-16. Switch back to the **Services** window the Remote Desktop session on ResDevWebVM1.
+28. Switch back to the **Services** window the Remote Desktop session on ResDevWebVM1.
 
-17. In the **Services** window, right-click the **World Wide Web Publishing Service** entry, and then select **Start** from the right-click menu.
+29. In the **Services** window, right-click the **World Wide Web Publishing Service** entry, and then select **Start** from the right-click menu.
 
-18. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default IIS webpage.
+30. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default IIS webpage.
 
 > **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
 
@@ -377,46 +381,46 @@
 
 4. Click **+ Add data disk**.
 
-5. In the **NAME** column, in the drop-down list, click **Create disk**.
-
-6. On the **Create managed disk** blade, specify the following settings and then click **Create**:
+5. On the **Attach unmanaged** blade, specify the following settings and then click **OK**:
 
 
   - Name: **ResDevWebVM1dd01**
 
   - Resource group: ensure that the **Use existing** option is selected and click **20533C0401-LabRG** in the drop down list.
 
-  - Account type: **Standard_LRS**
+  - Source type: **New (empty disk)**
 
-  - Source type: **None (empty disk)**
+  - Account type: **Standard (HDD)**
 
   - Size: **1023**
 
+  - Storage Container: Select the existing storage account and the **vhds** container
 
-1. Wait for the operation to complete.
 
-2. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry and then click **Save**.
+6. Wait for the operation to complete.
 
-3. Click **+ Add data disk**.
+7. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry and then click **Save**.
 
-4. In the **NAME** column, in the drop-down list, click **Create disk**.
+8. Click **+ Add data disk**.
 
-5. On the **Create managed disk** blade, specify the following settings and then click **Create**:
+9. On the **Attach unmanaged** blade, specify the following settings and then click **OK**:
 
 
   - Name: **ResDevWebVM1dd02**
 
   - Resource group: ensure that the **Use existing** option is selected and click **20533C0401-LabRG** in the drop down list.
 
-  - Account type: **Standard_LRS**
+  - Source type: **New (empty disk)**
 
-  - Source type: **None (empty disk)**
+  - Account type: **Standard (HDD)**
 
   - Size: **1023**
 
-1. Wait for the operation to complete.
+  - Storage Container: Select the existing storage account and the **vhds** container
 
-2. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry and then click **Save**.
+10. Wait for the operation to complete.
+
+11. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry and then click **Save**.
 
 
 #### Task 2: Configure a Storage Spaces simple volume
