Lab 6: Fixed download link for AZCopy, so it is clickable. Added step to replace the storage account name in New-FileShare_20533C06.ps1 to match the lab answer key.

--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -74,7 +74,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Install AzCopy
   
-1. Download and install AzCopy from **http://aka.ms/AzCopy**. Note that this page also includes documentation and examples for using AzCopy.
+1. Download and install AzCopy from http://aka.ms/AzCopy. Note that this page also includes documentation and examples for using AzCopy.
 
 2. Start Windows PowerShell ISE as Administrator.
 
@@ -133,7 +133,9 @@ The main tasks for this exercise are as follows:
 
 2. From the Windows PowerShell ISE, open **D:\Labfiles\Lab06\Starter\New-FileShare_20533C06.ps1**.
 
-3. Review the script, noting that it:
+3. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous exercise.
+
+4. Review the script, noting that it:
 
   - Sets the values of variables named **$shareName** and **$directoryName** for the file share and the directory to create in the Azure Storage account
 
@@ -149,9 +151,9 @@ The main tasks for this exercise are as follows:
 
   - Loops through the files in the source folder and uses the **Set-AzureStorageFileContent** cmdlet to copy each of them the folder in the Azure file share.
 
-4. Run the script to upload the files.
+5. Run the script to upload the files.
 
-5. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE.
+6. Observe the script as it runs, and then view the output. When you finish, close Windows PowerShell ISE.
 
 
 
@@ -172,19 +174,17 @@ The main tasks for this exercise are as follows:
 
 6. Modify the command you copied so by removing leading ` >` and replace `[drive letter]` with `*`.
 
-7. Use the Azure portal to copy the access key of the storage account and update the `net use` command by replacing `[storage account access key]` with the access key you copied.
+7. In Windows PowerShell ISE, execute the command and verify it completed successfully by creating a **Z:** drive mapping. 
 
-8. In Windows PowerShell ISE, execute the command and Verify it completed successfully by creating a **Z:** drive mapping. 
-
-9. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z:, which is now mapped to the assets file share that you created in the previous task:
+8. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z:, which is now mapped to the assets file share that you created in the previous task:
 
   ```
   Get-ChildItem -Path 'Z:\invoices'
   ```
 
-10. Verify that invoices are listed.
+9. Verify that invoices are listed.
 
-11. Sign out of the AdatumSvr06 VM to end the remote desktop session.
+10. Sign out of the AdatumSvr06 VM to end the remote desktop session.
 
 
 > **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the Azure storage account file share.
