--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -54,7 +54,7 @@
 
 #### Task 2: Install AzCopy
   
-1. In Internet Explorer, open a new tab, and then browse to **http://aka.ms/AzCopy**.
+1. In Internet Explorer, open a new tab, and then browse to http://aka.ms/AzCopy.
 
 2. In the **Download and install AzCopy** section, click the **latest version of AzCopy** link.
 
@@ -124,7 +124,7 @@
 
 6. In the **Open** dialog box, browse to **D:\Labfiles\Lab06\Starter\**, click **New-FileShare_20533C06.ps1**, and then click **Open**.
 
-7. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous task.
+7. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous exercise.
 
 8. Review the script, noting that it:
 
@@ -187,23 +187,17 @@
 
 15. In the command line you copied, replace `[drive letter]` with `*`.
 
-16. Switch to Internet Explorer displaying the Azure portal, scroll back to the storage account blade, and click **Access keys**.
+16. Verify that the command executed successfully, resulting in creation of the **Z:** drive mapping. 
 
-17. On the access keys blade, click the **Click to copy** icon next to **key1**. If prompted to allow access to the Clipboard, click **Allow access**.
-
-18. Switch to Windows PowerShell ISE window, in the script pane, replace `[storage account access key]` with the content of Clipboard. and then press the **F5** key to execute the command.
-
-19. Verify that the command executed successfully, resulting in creation of the **Z:** drive mapping. 
-
-20. In the console pane of the Windows PowerShell ISE window, run the following command to view the contents of the invoices folder on the Z: drive, which is now mapped to the assets file share that you created in a previous task:
+17. In the console pane of the Windows PowerShell ISE window, run the following command to view the contents of the invoices folder on the Z: drive, which is now mapped to the assets file share that you created in a previous task:
 
   ```
   Get-ChildItem -Path 'Z:\invoices'
   ```
 
-21. Verify that invoice documents are listed.
+18. Verify that invoice documents are listed.
 
-22. Close the Windows PowerShell ISE window and Internet Explorer, and then sign out of the Remote Desktop session to AdatumSvr06.
+19. Close the Windows PowerShell ISE window and Internet Explorer, and then sign out of the Remote Desktop session to AdatumSvr06.
 
 > **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the Azure storage account file share.
 
