Module 1 Lab Fixed heading of exercise 1.

--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -30,7 +30,7 @@ A. Datum Corporation wants to expand their cloud presence by taking advantage of
  Before starting this lab, ensure that you have performed the "Preparing the Environment" demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
 
 
-## Exercise 1: Creating, securing, and monitoring an Azure SQL Database
+## Exercise 1: Using the Azure portals
   
 ### Scenario
   
