Lab 4: Changed managed disks of VMs to Yes, so it is conform with the configuration of the availability set, the Lab AK, and the later task to add disks.

--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -86,7 +86,7 @@ The main tasks for this exercise are as follows:
 
   - Size: **A1 Standard**
 
-  - Use managed disks: **No**
+  - Use managed disks: **Yes**
 
   - Virtual network: _Accept the default name **20533C0401-LabRG-vnet** and settings_
 
@@ -122,7 +122,7 @@ The main tasks for this exercise are as follows:
 
   - Size: **A1 Standard**
 
-  - Use managed disks: **No**
+  - Use managed disks: **Yes**
 
   - Virtual network: **20533C0401-LabRG-vnet**
 
